--- a/Aula 10 - HTML 01/passagens.html
+++ b/Aula 10 - HTML 01/passagens.html
@@ -6,8 +6,11 @@
     <title>Euro Tour Passagens</title>
 </head>
 <body>
+    <header>
+        <img src="/images/eurotour-logo-cor.png" alt="logo euro tour">
+      </header>
     <h1>Passagens</h1>
     <p>Se você sempre sonhou em explorar destinos exóticos, mergulhar em culturas vibrantes ou relaxar em praias paradisíacas, agora é o momento perfeito para transformar esses sonhos em realidade! Na nossa Agência de Viagens, estamos empolgados em apresentar nossas promoções de passagens aéreas que vão tornar suas viagens ainda mais emocionantes e acessíveis.</p>
-    <a href="index.html">Voltar</a>
+    <a href="index.html">Voltar </a>
 </body>
 </html>
