--- a/Aula 10 - HTML 01/passagens.html
+++ b/Aula 10 - HTML 01/passagens.html
@@ -10,7 +10,18 @@
         <img src="/images/eurotour-logo-cor.png" alt="logo euro tour">
       </header>
     <h1>Passagens</h1>
-    <p>Se você sempre sonhou em explorar destinos exóticos, mergulhar em culturas vibrantes ou relaxar em praias paradisíacas, agora é o momento perfeito para transformar esses sonhos em realidade! Na nossa Agência de Viagens, estamos empolgados em apresentar nossas promoções de passagens aéreas que vão tornar suas viagens ainda mais emocionantes e acessíveis.</p>
+    <section>
+       <p>Se você sempre sonhou em explorar destinos exóticos, mergulhar em culturas vibrantes ou relaxar em praias paradisíacas, agora é o momento perfeito para transformar esses sonhos em realidade! Na nossa Agência de Viagens, estamos empolgados em apresentar nossas promoções de passagens aéreas que vão tornar suas viagens ainda mais emocionantes e acessíveis.</p> 
+    </section>
+    
     <a href="index.html">Voltar </a>
+    <footer>
+        <img src="/images/eurotour-logo-pb.png" alt="logo euro tour">
+        <ul>
+          <li>Facebook</li>
+          <li>Instagram</li>
+          <li>Linkedin</li>
+        </ul>
+      </footer>
 </body>
 </html>
