--- a/Aula 10 - HTML 01/pontos.html
+++ b/Aula 10 - HTML 01/pontos.html
@@ -12,5 +12,13 @@
     <h1>Pontos turísticos</h1>
     <p>No coração de Roma, o Coliseu permanece como um testemunho imponente do poder e da engenhosidade dos romanos antigos. Este anfiteatro lendário é um portal direto para a Roma Antiga, onde gladiadores enfrentavam-se em batalhas épicas e multidões vibravam. Hoje, suas ruínas majestosas atraem visitantes de todo o mundo, ansiosos para mergulhar na rica história que ele representa.</p>
     <a href="index.html">Voltar</a>
+    <footer>
+        <img src="/images/eurotour-logo-pb.png" alt="logo euro tour">
+        <ul>
+          <li>Facebook</li>
+          <li>Instagram</li>
+          <li>Linkedin</li>
+        </ul>
+      </footer>
 </body>
 </html>
