--- a/Aula 10 - HTML 01/pontos.html
+++ b/Aula 10 - HTML 01/pontos.html
@@ -10,6 +10,7 @@
         <img src="/images/eurotour-logo-cor.png" alt="logo euro tour">
       </header>
     <h1>Pontos turísticos</h1>
+    <h2>Não perca!</h2>
     <p>No coração de Roma, o Coliseu permanece como um testemunho imponente do poder e da engenhosidade dos romanos antigos. Este anfiteatro lendário é um portal direto para a Roma Antiga, onde gladiadores enfrentavam-se em batalhas épicas e multidões vibravam. Hoje, suas ruínas majestosas atraem visitantes de todo o mundo, ansiosos para mergulhar na rica história que ele representa.</p>
     <a href="index.html">Voltar</a>
     <footer>
