--- a/Aula 10 - HTML 01/hospedagem.html
+++ b/Aula 10 - HTML 01/hospedagem.html
@@ -10,6 +10,7 @@
         <img src="/images/eurotour-logo-cor.png" alt="logo euro tour">
       </header>
     <h1>Hospedagem</h1>
+    <h2>Confira nossa opções</h2>
     <p>Nossa hospedaria é um verdadeiro oásis de tranquilidade. Situada em meio a paisagens deslumbrantes, oferecemos um refúgio sereno do agito da vida cotidiana. Cada quarto é meticulosamente decorado, proporcionando uma atmosfera acolhedora e relaxante. Dos móveis elegantes às roupas de cama macias, cada detalhe foi cuidadosamente planejado para garantir que sua estadia seja não apenas confortável, mas verdadeiramente rejuvenescedora.</p>
     <a href="index.html">Voltar</a>
     <footer>
