--- a/Aula 10 - HTML 01/aula.html
+++ b/Aula 10 - HTML 01/aula.html
@@ -1,5 +1,19 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="fonte-01">
+        Roboto
+    </div>
+    <div class="fonte-02">
+        Maven pro
+    </div>
+</body>
+</html>
 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-<link href="https://fonts.googleapis.com/css2?family=Maven+Pro&family=Roboto&display=swap" rel="stylesheet">
